--- a/webs.tex
+++ b/webs.tex
@@ -868,7 +868,11 @@ Next, to the right of each elementary piece of the Morse decomposition of $D_2$,
 \draw[dashed,mid>] (0,0.5) -- (0,1);
 }
 \end{align*}
-to obtain $E_2$. In each of the local replacements the new diagram consists of part of an upright of the ladder, along with several `half-rungs'. It is easy to see that all of these half-rungs come in matching pairs forming complete rungs, except at the left margin of $E_2$. Similarly, $E_1$ is a ladder diagram except that it has half-rungs along its right margin. The horizontal juxtaposition $E_1 E_2$ is then a ladder diagram.
+to obtain $E_2$.
+
+\todo{Explain why $D_2 = E_2$ in the spider. Which relations do we use exactly? Should we move those relations to the free spider?? Mention that the replacements we're using at crossings are actually the braiding?}
+
+In each of the local replacements used to form $E_2$ the new diagram consists of part of an upright of the ladder, along with several `half-rungs'. It is easy to see that all of these half-rungs come in matching pairs forming complete rungs, except at the left margin of $E_2$. Similarly, $E_1$ is a ladder diagram except that it has half-rungs along its right margin. The horizontal juxtaposition $E_1 E_2$ is then a ladder diagram.
 It is clear that $D$ is equivalent (via deleting $0$ and $n$ strands, relation \ref{eq:cancel-tags} and \todo{???}) in $\Sp(SL_n)^+$ to $E_1 E_2$.
 \end{proof}
 
