minor changes to proof of main theorem

--- a/webs.tex
+++ b/webs.tex
@@ -490,7 +490,7 @@ We will use the following commutative diagram
 where the three categories in the bottom row were defined in section \ref{sec:diagrams}, while 
 $\Phi$ and $\dU^n(\gl_m)$ and defined in section \ref{sec:phi} and $\Lad_n^m$ and $\Psi$ are defined in section \ref{sec:ladders}.
 
-Commutativity of the triangle follows from the construction of $\Phi,\Psi$ and $\Gamma$ \todo{need a reference?}. The commutativity of the rectangle in (\ref{diag:main}) is clear for the following reason. Going down and to the right takes the ladder generators to themselves. On the other hand, going right and down takes the generators to $E_i^{(r)}$ or $F_i^{(r)}$ and then back to themselves. 
+Commutativity of the triangle follows from the construction of $\Phi,\Psi$ and $\Gamma$ \todo{we need to explain this explicitly somewhere, in particular checking normalizations}. The commutativity of the rectangle in (\ref{diag:main}) is a consequence of Proposition \ref{prop:psi}, which constructs $\Phi$ by showing the map $\Lad_n^m \to \FSp(\SL_n)^+ \to \Sp(\SL_n)^+$ can be lifted via $\dU^n(\gl_m)$. In terms of generators, we see that going down and to the right takes the ladder generators to themselves. On the other hand, going right and down takes the generators to $E_i^{(r)}$ or $F_i^{(r)}$ and then back to themselves. 
 
 We now explain why $\Gamma_n$ is an equivalence of categories. Since it is clearly an isomorphism on objects we must show that it is fully faithful. Surjectivity (fullness) of $\Gamma_n$ on $\Hom$ spaces follows from Lemma \ref{lem:surjective}. It remains to show that if $\phi$ is a morphism such that $\Gamma_n(\phi)=0$ then $\phi=0$. 
 
