--- a/webs.tex
+++ b/webs.tex
@@ -1049,7 +1049,7 @@ where $ \ul{k'} = \ul{k} + \alpha_i $.
 
 From (\ref{eq:Eaction}), we see that $$ \Phi_n^m(E_j \one_{\ul{k}}) = (-1)^{|S_{j+1}| -1} I^{\otimes j-1} \otimes F_{k_j,1} \otimes I^{\otimes m-j} \circ I^{\otimes j} \otimes G_{1, k_{j+1} - 1} \otimes I^{\otimes m-j - 1} $$
 
-On the other hand, consider the $ w = \Psi^n_m(E_j \one_{\ul{k}})$ 
+On the other hand, consider the web $ w = \Psi^n_m(E_j \one_{\ul{k}})$ 
 $$
 \begin{tikzpicture}[baseline=20]
 \laddercoordinates{1}{1}
@@ -1062,7 +1062,7 @@ From the definition of $\Gamma_n $ in section \ref{sec:deffunctor} we see that $
   
 A similar argument holds for the $F_j $ and since these generate $\dU(\gl_m) $, the result follows.
 
-\todo{Note that there is a sign discrepancy here.  If this is correct (i.e. I didn't make a mistake somewhere), then we should fix this sign error somewhere --- maybe by changing the definition of $\Phi_n^m$).}
+\todo{Note that there is a sign discrepancy here.  If this is correct (i.e. I didn't make a mistake somewhere), then we should fix this sign error somewhere --- maybe by changing the definition of $\Phi_n^m$.}
 \end{proof}
 
 \subsection{Surjectivity}
