--- a/webs.tex
+++ b/webs.tex
@@ -1139,33 +1139,6 @@ E_1 =
 Next, to the right of each elementary piece of the Morse decomposition of $D_2$, superimpose either a vertical $0$ strand or a vertical $n$ strand and then make the following local replacements
 \begin{align*}
 \tikz[baseline=6]{
-\draw[mid>] (-1,0) -- (0,0);
-\draw (0,0) --node[below] {$a$} (1,0);
-\draw[mid>, dashed] (0,-1) -- (0,0);
-\draw[dashed] (0,0) --node[right] {0} (0,1);
-} & \mapsto
-\tikz[baseline=6]{
-\draw[mid>] (-1,-0.2) -- (0,-0.2);
-\draw[mid>] (0,-0.2) -- (0,0.2);
-\draw[mid>] (0,0.2) --node[below] {$a$} (1,0.2);
-\draw[mid>,dashed]  (0,-1) -- (0,-0.2);
-\draw[dashed] (0,0.2) --node[right] {0} (0,1);
-}
-&
-\tikz[baseline=6]{
-\draw[mid<] (-1,0) -- (0,0);
-\draw (0,0) --node[below] {$a$} (1,0);
-\draw[mid>, dashed] (0,-1) -- (0,0);
-\draw[dashed] (0,0) --node[right] {0} (0,1);
-} & \mapsto
-\tikz[baseline=6]{
-\draw[mid<] (-1,0.2) -- (0,0.2);
-\draw[mid>] (0,-0.2) -- (0,0.2);
-\draw[mid<] (0,-0.2) --node[below] {$a$} (1,-0.2);
-\draw[mid>,dashed]  (0,-1) -- (0,-0.2);
-\draw[dashed] (0,0.2) --node[right] {0} (0,1);
-} \displaybreak[1]\\\\
-\tikz[baseline=6]{
 \draw[mid>] (-1,0.5) to[out=0,in=0] node[right] {$a$} (-1,-0.5);
 \draw[mid>, dashed] (0,-1) --node[right] {$n$} (0,1);
 } & \mapsto
@@ -1190,8 +1163,8 @@ Next, to the right of each elementary piece of the Morse decomposition of $D_2$,
 }
 \displaybreak[1]\\\\
 \tikz[baseline=6]{
-\draw[mid>] (1,0.5) to[out=180,in=180] node[right] {$a$} (1,-0.5);
-\draw[mid>, dashed] (0,-1) --node[right] {$n$} (0,1);
+\draw[mid>] (2,0.5) -- (1,0.5) to[out=180,in=180] node[left] {$a$} (1,-0.5) -- (2,-0.5);
+\draw[mid>, dashed] (1.25,-1) --node[right] {$n$} (1.25,1);
 } & \mapsto
 \tikz[baseline=6]{
 \draw[mid>, dashed] (0,-1) --node[left] {$n$} (0,-0.5);
@@ -1202,8 +1175,8 @@ Next, to the right of each elementary piece of the Morse decomposition of $D_2$,
 }
 &
 \tikz[baseline=6]{
-\draw[mid<] (1,0.5) to[out=180,in=180] node[right] {$a$} (1,-0.5);
-\draw[mid>, dashed] (0,-1) --node[right] {$0$} (0,1);
+\draw[mid<] (2,0.5) -- (1,0.5) to[out=180,in=180] node[left] {$a$} (1,-0.5) -- (2,-0.5);
+\draw[mid>, dashed] (1.25,-1) --node[right] {$0$} (1.25,1);
 } & \mapsto
 \tikz[baseline=6]{
 \draw[mid>, dashed] (0,-1) --node[left] {$0$} (0,-0.5);
@@ -1217,51 +1190,51 @@ Next, to the right of each elementary piece of the Morse decomposition of $D_2$,
 \draw[mid>] (-1,0.5) node[left] {$a$} -- (-0.5,0);
 \draw[mid>] (-1,-0.5) node[left] {$b$}-- (-0.5,0);
 \draw[upper>] (-0.5,0) -- (1,0) node[right] {$a{+}b$};
-\draw[dashed,lower>] (0,-1) -- (0,1);
+\draw[dashed,lower>] (0,-1) node[below] {0} -- (0,1) node[above] {0};
 }
 & \mapsto
 \tikz[baseline=6]{
 \draw[mid>] (-1,-0.5) node[left] {$b$} -- (0,-0.5);
 \draw[mid>] (-1,0) node[left] {$a$} -- (0,0);
 \draw[mid>] (0,0.5) -- (1,0.5) node[right] {$a{+}b$} ;
-\draw[dashed,mid>] (0,-1) -- (0,-0.5);
+\draw[dashed,mid>] (0,-1) node[below] {0} -- (0,-0.5);
 \draw[mid>] (0,-0.5) -- (0,0);
 \draw[mid>] (0,0) -- (0,0.5);
-\draw[dashed,mid>] (0,0.5) -- (0,1);
+\draw[dashed,mid>] (0,0.5) -- (0,1) node[above] {0};
 }
 &
 \tikz[baseline=6]{
 \draw[mid<] (-1,0.5) node[left] {$a$} -- (-0.5,0);
 \draw[mid<] (-1,-0.5) node[left] {$b$}-- (-0.5,0);
 \draw[upper<] (-0.5,0) -- (1,0) node[right] {$a{+}b$};
-\draw[dashed,lower>] (0,-1) -- (0,1);
+\draw[dashed,lower>] (0,-1) node[below] {0} -- (0,1) node[above] {0};
 }
 & \mapsto
 \tikz[baseline=6]{
 \draw[mid<] (-1,0) node[left] {$b$} -- (0,0);
 \draw[mid<] (-1,0.5) node[left] {$a$} -- (0,0.5);
 \draw[mid<] (0,-0.5) -- (1,-0.5) node[right] {$a{+}b$} ;
-\draw[dashed,mid>] (0,-1) -- (0,-0.5);
+\draw[dashed,mid>] (0,-1) node[below] {0} -- (0,-0.5);
 \draw[mid>] (0,-0.5) -- (0,0);
 \draw[mid>] (0,0) -- (0,0.5);
-\draw[dashed,mid>] (0,0.5) -- (0,1);
+\draw[dashed,mid>] (0,0.5) -- (0,1) node[above] {0};
 }
 \displaybreak[1]\\\\
 \tikz[baseline=6]{
 \draw[mid<] (-1,0.5) node[left] {$a{+}b$} -- (-0.5,0);
 \draw[mid>] (-1,-0.5) node[left] {$a$}-- (-0.5,0);
 \draw[upper<] (-0.5,0) -- (1,0) node[right] {$b$};
-\draw[dashed,lower>] (0,-1) -- (0,1);
+\draw[dashed,lower>] (0,-1) node[below] {0} -- (0,1) node[above] {0};
 }
 & \mapsto
 \tikz[baseline=6]{
 \draw[mid>] (-1,-0.5) node[left] {$a$} -- (0,-0.5);
 \draw[mid<] (-1,0.5) node[left] {$a{+}b$} -- (0,0.5);
 \draw[mid<] (0,0) -- (1,0) node[right] {$b$} ;
-\draw[dashed,mid>] (0,-1) -- (0,-0.5);
+\draw[dashed,mid>] (0,-1) node[below] {0} -- (0,-0.5);
 \draw[mid>] (0,-0.5) -- (0,0);
 \draw[mid>] (0,0) -- (0,0.5);
-\draw[dashed,mid>] (0,0.5) -- (0,1);
+\draw[dashed,mid>] (0,0.5) -- (0,1) node[above] {0};
 }
 &
 \tikz[baseline=6]{
@@ -1302,25 +1275,80 @@ Next, to the right of each elementary piece of the Morse decomposition of $D_2$,
 \draw[mid<] (-1,0.5) node[left] {$a$} -- (-0.5,0);
 \draw[mid>] (-1,-0.5) node[left] {$a{+}b$}-- (-0.5,0);
 \draw[upper>] (-0.5,0) -- (1,0) node[right] {$b$};
-\draw[dashed,lower>] (0,-1) -- (0,1);
+\draw[dashed,lower>] (0,-1) node[below] {0} -- (0,1) node[above] {0};
 }
 & \mapsto
 \tikz[baseline=6]{
 \draw[mid>] (-1,-0.5) node[left] {$a{+}b$} -- (0,-0.5);
 \draw[mid<] (-1,0.5) node[left] {$a$} -- (0,0.5);
 \draw[mid>] (0,0) -- (1,0) node[right] {$b$} ;
-\draw[dashed,mid>] (0,-1) -- (0,-0.5);
+\draw[dashed,mid>] (0,-1) node[below] {0} -- (0,-0.5);
 \draw[mid>] (0,-0.5) -- (0,0);
 \draw[mid>] (0,0) -- (0,0.5);
-\draw[dashed,mid>] (0,0.5) -- (0,1);
+\draw[dashed,mid>] (0,0.5) -- (0,1) node[above] {0};
 }
 \end{align*}
-to obtain $E_2$.
-
-\todo{Explain why $D_2 = E_2$ in the spider. Which relations do we use exactly? Should we move those relations to the free spider?? Mention that the replacements we're using at crossings are actually the braiding?}
+and then finally replacing each other instance where a superimposed strand crosses a horizontal strand of $D_2$ as follows
+\begin{align*}
+\tikz[baseline=6]{
+\draw[mid>] (-1,0) -- (0,0);
+\draw (0,0) --node[below] {$a$} (1,0);
+\draw[mid>, dashed] (0,-1) -- (0,0);
+\draw[dashed] (0,0) --node[right] {0} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>] (-1,-0.2) -- (0,-0.2);
+\draw[mid>] (0,-0.2) -- (0,0.2);
+\draw[mid>] (0,0.2) --node[below] {$a$} (1,0.2);
+\draw[mid>,dashed]  (0,-1) -- (0,-0.2);
+\draw[dashed] (0,0.2) --node[right] {0} (0,1);
+}
+&
+\tikz[baseline=6]{
+\draw[mid<] (-1,0) -- (0,0);
+\draw (0,0) --node[below] {$a$} (1,0);
+\draw[mid>, dashed] (0,-1) -- (0,0);
+\draw[dashed] (0,0) --node[right] {0} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid<] (-1,0.2) -- (0,0.2);
+\draw[mid>] (0,-0.2) -- (0,0.2);
+\draw[mid<] (0,-0.2) --node[below] {$a$} (1,-0.2);
+\draw[mid>,dashed]  (0,-1) -- (0,-0.2);
+\draw[dashed] (0,0.2) --node[right] {0} (0,1);
+} \displaybreak[1] \\\\
+\tikz[baseline=6]{
+\draw[mid>] (-1,0) -- (0,0);
+\draw (0,0) --node[below] {$a$} (1,0);
+\draw[mid>, dashed] (0,-1) -- (0,0);
+\draw[dashed] (0,0) --node[right] {$n$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid>] (-1,0.3) -- node[above] {$a$} (0,0.3);
+\draw[mid>] (0,-0.3) --node[left] {$n{-}a$} (0,0.3);
+\draw[mid>] (0,-0.3) --node[below] {$a$} (1,-0.3);
+\draw[mid>,dashed]  (0,-1) -- (0,-0.3);
+\draw[mid>,dashed] (0,0.3) --node[right] {$n$} (0,1);
+}
+&
+\tikz[baseline=6]{
+\draw[mid<] (-1,0) -- (0,0);
+\draw (0,0) --node[below] {$a$} (1,0);
+\draw[mid>, dashed] (0,-1) -- (0,0);
+\draw[dashed] (0,0) --node[right] {$n$} (0,1);
+} & \mapsto
+\tikz[baseline=6]{
+\draw[mid<] (-1,-0.3) --node[below] {$a$} (0,-0.3);
+\draw[mid>] (0,-0.3) --node[left] {$n{-}a$} (0,0.3);
+\draw[mid<] (0,0.3) --node[below] {$a$} (1,0.3);
+\draw[mid>,dashed]  (0,-1) -- (0,-0.3);
+\draw[mid>,dashed] (0,0.3) --node[right] {$n$} (0,1);
+}
+\end{align*}
+to obtain $E_2$. Now one can check that $E_2$ is in fact equal to $D_2$, using only a few relations from the spider. In particular, for each of the replacements above involving a $0$ strand, when we delete the $0$ strands we see that nothing has changed. In the replacements involving an $n$ strand but no trivalent vertices, after removing the $n$-strands and replacing their endpoints with tags, we find we can cancel the tags according to Equation \eqref{eq:cancel-tags}. Finally, in the replacements involving an $n$ strand to the right of a trivalent vertex, we need to use Equation \eqref{eq:tag-migration} to move one tag past the trivalent vertex, and then Equation \eqref{eq:cancel-tags} to cancel them. \todo{Is it sufficiently confusing which replacements are being talked about here that I should number them? --Scott}
 
 In each of the local replacements used to form $E_2$ the new diagram consists of part of an upright of the ladder, along with several `half-rungs'. It is easy to see that all of these half-rungs come in matching pairs forming complete rungs, except at the left margin of $E_2$. Similarly, $E_1$ is a ladder except that it has half-rungs along its right margin. The horizontal juxtaposition $E_1 E_2$ is then a ladder.
-It is clear that $D$ is equivalent (via deleting $0$ and $n$ strands, relation \ref{eq:cancel-tags} and \todo{???}) in $\Sp(SL_n)^+$ to $E_1 E_2$.
+Since $D$ is equivalent in $\Sp(SL_n)^+$ to $E_1 E_2$, we are finished.
 \end{proof}
 
 \appendix
